--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="shortcut" href="./favicon.ico" type="image/x-icon">
-
+    <link rel="stylesheet" href="./css/base/base.css">
+    <link rel="stylesheet" href="./css/base/layout.css">
     <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
@@ -17,6 +18,15 @@
     <title>Coming soon</title>
 </head>
 <body>
-    content alio
+    <section class="container bg-main">
+        <div class="row-short">hero</div>
+    </section>
+    <section class="container">
+        <div class="row">main</div>
+    </section>
+    <section class="container bg-main">
+        <div class="row">social</div>
+        <div class="row-short">footer</div>
+    </section>
 </body>
 </html>
