--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
 <body>
     <section class="container bg-main">
         <div class="row-short">hero</div>
+        <img src="./img/logo.png" alt="logo">
+        <p>lol</p>
+        <div>
+            clock
+        </div>
+        <form action="">
+            subscribe
+        </form>
+        <div>
+            mouse
+        </div>
     </section>
     <section class="container">
         <div class="row">main</div>
