--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <section class="container bg-main">
-        <div class="row-short">hero</div>
+        <div class="row-short">hero
         <img src="./img/logo.png" alt="logo">
         <p>lol</p>
         <div>
@@ -31,6 +31,7 @@
         <div>
             mouse
         </div>
+    </div>
     </section>
     <section class="container">
         <div class="row">main</div>
