--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./pages/home.css">
     <link rel="shortcut" href="./favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/base/base.css">
-    <link rel="stylesheet" href="./css/base/layout.css">
     <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
@@ -19,9 +17,10 @@
 </head>
 <body>
     <section class="container bg-main">
-        <div class="row-short">hero
-        <img src="./img/logo.png" alt="logo">
-        <p>lol</p>
+        <div class="row-short hero">hero
+        <img class="logo" src="./img/logo1.png" alt="logo">
+        <h2 class="title">Coming soon</h2>
+        <p class="description">lol</p>
         <div>
             clock
         </div>
