--- a/index.html
+++ b/index.html
@@ -35,8 +35,39 @@
 
 
     <section class="container">
-        <div class="row">main</div>
+
+        <div class="row main-content">
+            <div class=" column left-column">
+                <h3 class="section-title">About Startup</h3>
+                <p class="section-description">Lorem ipsum dolor sit amet, consectetur
+                     adipisicing elit. Pariatur saepe ut recusandae dolores.
+                      Incidunt ipsa perspiciatis doloremque aut cumque,
+                       consectetur tenetur officia
+                     accusamus ipsam facilis culpa quasi pariatur illo labore!</p>
+                        <div>PROGRESS BAR 1</div>
+                        <div>PROGRESS BAR 2</div>
+                        <div>PROGRESS BAR 3</div>
+            </div>
+
+
+            <div class="column right-column">
+                <h3 class="section-title">have any questions ?</h3>
+                <p class="section-description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Quasi ducimus doloribus, <a href="#">tempore</a> non dolorum omnis sint,
+                sequi asperiores dolorem optio repellendus voluptate dicta
+                natus nostrum tenetur,expedita accusantium nam voluptatibus!</p>
+                    <form>
+                        MESSAGE FORM
+                    </form>
+            </div>
+        </div>
+
     </section>
+
+
+
+
+
     <section class="container bg-main">
         <div class="row">social</div>
         <div class="row-short">footer</div>
