--- a/index.html
+++ b/index.html
@@ -69,8 +69,21 @@
 
 
     <section class="container bg-main">
-        <div class="row">social</div>
-        <div class="row-short">footer</div>
+        <div class="row">
+
+        </div>
+        <div class="row-short footer-bottom">
+            <img class="logo" src="./img/logo.png" alt="logo">
+            <div class="futeriukai">
+                <p>Copyright &copy; 2022 <a href="#">Matrox</a></p>
+                <p>All rights reserved </p>
+                <p>Designed by <a href="#" target="_blank">TrendyTheme</a></p>
+            </div>
+                <p>Matrox pack includes complete websites not just homepages it comes
+                    with full website demos. Over <a href="#">200+</a> ready html files
+                    only for 17$ Purchase <a href="#">Matrox</a> Now!</p>
+                </p>
+        </div>
     </section>
 </body>
 </html>
