--- a/index.html
+++ b/index.html
@@ -69,8 +69,15 @@
 
 
     <section class="container bg-main">
-        <div class="row">
-
+        <div class="row socials">
+            <a class="fa fa-globe" href="#"></a>
+            <a class="fa fa-globe" href="#"></a>
+            <a class="fa fa-globe" href="#"></a>
+            <a class="fa fa-globe" href="#"></a>
+            <a class="fa fa-globe" href="#"></a>
+            <a class="fa fa-globe" href="#"></a>
+            
+            </a>
         </div>
         <div class="row-short footer-bottom">
             <img class="logo" src="./img/logo.png" alt="logo">
