--- a/index.html
+++ b/index.html
@@ -21,8 +21,47 @@
             <img class="logo" src="./img/logo1.png" alt="logo">
             <h2 class="title">Coming soon</h2>
             <p class="description">lol</p>
-                <div>
-                    clock
+
+
+
+
+            
+                <div class="clock">
+                    <div class="time">
+                        <div class="value">999</div>
+                        <div class="label">days</div>
+                    </div>
+                    <div class="time">
+                        <div class="value">99</div>
+                        <div class="label">hours</div>
+                    </div>
+                    <div class="time">
+                        <div class="value">99</div>
+                        <div class="label">minutes</div>
+                    </div>
+                    <div class="time">
+                        <div class="value">99</div>
+                        <div class="label">seconds</div>
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                 </div>
             <form action="">
                 subscribe
