--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 
-            
+
                 <div class="clock">
                     <div class="time">
                         <div class="value">999</div>
@@ -43,32 +43,40 @@
                         <div class="value">99</div>
                         <div class="label">seconds</div>
                     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 </div>
             <form action="">
                 subscribe
             </form>
-            <div>
-                mouse
+
+
+
+
+
+
+
+
+
+
+
+
+            <div class="mouse">
+        
             </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         </div>
     </section>
 
