--- a/index.html
+++ b/index.html
@@ -93,10 +93,53 @@
                       Incidunt ipsa perspiciatis doloremque aut cumque,
                        consectetur tenetur officia
                      accusamus ipsam facilis culpa quasi pariatur illo labore!</p>
-                        <div>PROGRESS BAR 1</div>
-                        <div>PROGRESS BAR 2</div>
-                        <div>PROGRESS BAR 3</div>
+                        <div class="progress-bar">
+                            <div class="topas">
+                                <div class="label">UX design</div>
+                                <div class="value">90%</div>
+                            </div>
+                            <div class="bottom">
+                                <div class="bar" style="width: 90%">
+                                <div class="loader"></div>
+                            </div>
+                            </div>
+                        </div>
+                        <div class="progress-bar">
+                            <div class="topas">
+                                <div class="label">Web design</div>
+                                <div class="value">86%</div>
+                            </div>
+                            <div class="bottom">
+                                <div class="bar" style="width: 86%">
+                                <div class="loader"></div>
+                            </div>
+                            </div>
+                        </div>
+                        <div class="progress-bar">
+                            <div class="topas">
+                                <div class="label">Web development</div>
+                                <div class="value">50%</div>
+                            </div>
+                            <div class="bottom">
+                                <div class="bar" style="width: 50%">
+                                <div class="loader"></div>
+                            </div>
+                            </div>
+                        </div>
+
             </div>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
             <div class="column right-column">
@@ -147,5 +190,7 @@
                 </p>
         </div>
     </section>
+
+    <a href="#" class="btn fa fa-angle-up back-to-top"></a>
 </body>
 </html>
